# data-quality-slo

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/data_quality_slo/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_data_quality_slo.py
